--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
 </head>
 <body>
     <header>
-        CITADELLE
-      </header>
-      <main>
-        Main content
-      </main>
+      <div class="shuttle"></div>
+        <p>CITADELLE</p>
+        <div class="shuttle left"></div>
+    </header>
+    <main>
+      Main content
+    </main>
   
-      <footer>
-        Citadelle 2021 ©
-      </footer>
+    <footer>
+      Citadelle 2021 ©
+    </footer>
   
-      <script src="src/index.js"></script>
+    <script src="src/index.js"></script>
     
 </body>
 </html>
