Two lines on index

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       </header>
       <main>
         Main content
+        hzgekrhzioerinnucikrfhbehb,hz$
+        zjfbjkhskfbjksbfjk
       </main>
   
       <footer>
