First version home page done

--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
         <div class="shuttle left"></div>
     </header>
     <main>
-      Main content
-      zkjrhrfjkhskjgzkrgn
+      <div class="imgHome"></div>
+      <img src="/img/separatorHome.png" class="separator"/>
+      <div class="buttonContainer">
+        <button>START</button>
+        <button>RULES</button>
+        <button>CREDITS</button>
+      </div>
+      
     </main>
   
     <footer>
